force-app/main/default/objects/Job_Schedule__c/Job_Schedule__c.object-meta.xml
<CustomObject>
    <label>Job Schedule</label>
    <nameField>
        <label>Job Schedule Name</label>
        <type>AutoNumber</type>
        <displayFormat>SCH-{00000}</displayFormat>
    </nameField>
    <pluralLabel>Job Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>