force-app/main/default/objects/Job_Schedule__c/fields/Duration_Hours__c.field-meta.xml
<CustomField>
    <fullName>Duration_Hours__c</fullName>
    <label>Duration (Hours)</label>
    <type>Number</type>
    <precision>4</precision><scale>1</scale>
</CustomField>