force-app/main/default/objects/Job_Schedule__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <type>LongTextArea</type>
    <length>2000</length><visibleLines>3</visibleLines>
</CustomField>