force-app/main/default/objects/Job_Schedule__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Scheduled</fullName><default>true</default></value><value><fullName>In Progress</fullName></value><value><fullName>Completed</fullName></value><value><fullName>Cancelled</fullName></value></valueSetDefinition></valueSet>
</CustomField>