force-app/main/default/objects/Job_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Work_Order__c</columns>
    <columns>Technician__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Job Schedules</label>
</ListView>